syntax = "proto3";
package message;
import "proto/accountState.proto";

option go_package = "/proto";

message Header {
    string Id = 1;
    string Type = 2;
    bytes From = 3; 
    string Command = 4;
    int64 StatusCode = 5;
    int64 Time = 6;
}

message Message {
    Header Header = 1;
    bytes body = 2;
}

message InitConnection {
    bytes Address = 1;
    string Type = 2;
}

message GetAccountInfo {
    bytes Address = 1;
}

message Error {
    string Code = 1;
    string Description = 2;
    bytes Address = 3;
    bytes TransactionHash = 4;
}

message PendingSmartContractState {
    string StorageHost = 1;
    bytes Address = 2;
    accountState.SmartContractState SmartContractState = 3; 
}

message SmartContractStateResult {
    bytes Address = 1;
    accountState.SmartContractState SmartContractState = 2;
}

message QueryLog {
    bytes TransactionHash = 1;
    bytes Address = 2;
    bytes FromBlock = 3; 
    bytes ToBlock = 4; // toblock only can <= fromblock +=10
    bytes Topic1 = 5;
    bytes Topic2 = 6;
    bytes Topic3 = 7;
    bytes Topic4 = 8;
    int32 Limit = 9;
    int32 Page = 10;
}