syntax = "proto3";
package receipt;

option go_package = "/proto";

message Receipt {
    bytes TransactionHash = 1;
    bytes FromAddress = 2;
    bytes ToAddress = 3;
    bytes Amount = 4;
    int32 Status = 5;
    bytes ReturnValue = 6;
} 
